feat: implement codebase indexing service with Lucene integration and project management utilities